--- a/pug/default/header-black.pug
+++ b/pug/default/header-black.pug
@@ -16,4 +16,7 @@ header.header-black
       .btn-wc.accaunt-head
         img(src="../images/face.jpg").accaunt-img
         .accaunt-link
+        // mobile-menu
+        include popup-account.pug
+        // mobile-menu
 .hamburger.color
