--- a/css/style.css
+++ b/css/style.css
@@ -213,11 +213,6 @@ textarea,
   background: #ffffff;
   resize: none;
 }
-input.btn,
-textarea.btn,
-.custom-select.btn {
-  border: 0;
-}
 
 /* -----custom-select-----*/
 .custom-select {
@@ -346,7 +341,14 @@ textarea.btn,
   display: flex;
   z-index: 3;
   background: #444444;
-  display: none;
+  transition: ease-out 0.25s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.popup-wrapper.show {
+  opacity: 1;
+  visibility: visible;
 }
 
 .popup-container {
@@ -396,7 +398,67 @@ textarea.btn,
   padding: 13px 15px;
 }
 
+.form-link {
+  text-align: center;
+}
+.form-link a {
+  text-decoration: none;
+}
+.form-link a:hover {
+  text-decoration: underline;
+}
+
 /* -----popup-----*/
+/* -----popup-accautnt----*/
+.popup-account {
+  width: 350px;
+  height: auto;
+  right: 0px;
+  top: calc(100% + 30px);
+  position: absolute;
+  display: block;
+  z-index: auto;
+  border-radius: 5px;
+  background: #ffffff;
+  padding: 15px;
+  text-align: left;
+  box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.5);
+  transition: ease-out 0.25s;
+  opacity: 0;
+  visibility: hidden;
+}
+.popup-account.show {
+  opacity: 1;
+  visibility: visible;
+}
+.popup-account:before {
+  content: "";
+  width: 20px;
+  height: 20px;
+  right: 30px;
+  top: -8px;
+  position: absolute;
+  display: block;
+  z-index: auto;
+  background: #ffffff;
+  transform: rotate(45deg);
+  box-shadow: -3px -5px 13px -6px rgba(0, 0, 0, 0.5);
+}
+.popup-account .pc-head {
+  display: flex;
+}
+.popup-account h3 {
+  padding: 11px 0px 15px 15px;
+}
+.popup-account ul {
+  margin-top: 10px;
+}
+.popup-account ul,
+.popup-account li {
+  display: block;
+}
+
+/* -----popup-accautnt----*/
 /*-----forms-----*/
 /*-----header-----*/
 header {
@@ -435,8 +497,9 @@ header.header-black .btn {
   border-color: #444444;
 }
 
-.account-head {
+.accaunt-head {
   margin: -5px 0 0 0;
+  position: relative;
 }
 
 .accaunt-img {
@@ -446,6 +509,7 @@ header.header-black .btn {
   position: relative;
   object-fit: cover;
   vertical-align: middle;
+  cursor: pointer;
 }
 
 .accaunt-link {
