--- a/pug/index.pug
+++ b/pug/index.pug
@@ -169,6 +169,8 @@ html
 									.text Это платформа для организаторов и людей которым интересны мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей. И людей мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей. и людей которым интересны мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей.
 						.slider-img
 							img.mobile-3(src="../images/mobile-3.png")
+							img.mobile-3(src="../images/mobile-3.png")
+							img.mobile-3(src="../images/mobile-3.png")
 			//- .section-slider
 
 				//- .section-slider
