--- a/css/style.css
+++ b/css/style.css
@@ -1183,10 +1183,25 @@ h2.global span {
 .section-slider .slider-img {
   grid-column: span 6;
   text-align: center;
+  position: relative;
 }
 .section-slider .slider-img .mobile-3 {
   width: 30%;
   min-width: 240px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  visibility: hidden;
+  transition: ease-out 0.5s;
+  transform: translateY(30px);
+  transition-delay: 0s;
+}
+.section-slider .slider-img .mobile-3.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0px);
+  transition-delay: 0.5s;
 }
 .section-slider .slider-img .page {
   width: 100%;
