--- a/scss/sourse/_main-page.scss
+++ b/scss/sourse/_main-page.scss
@@ -349,6 +349,7 @@ h2.global {
   grid-column: span 4;
   font-size: $smallSize;
   margin: 0 0 30px;
+  background: $whiteColor;
 
   .qi-ico {
     width: 42px;
