--- a/css/response.css
+++ b/css/response.css
@@ -41,6 +41,8 @@
 
   .main-grid {
     padding: 0 15px;
+    position: relative;
+    z-index: 2;
     grid-column-gap: 0;
   }
 
@@ -113,9 +115,14 @@
     width: 200px;
     margin-left: 60px;
   }
+  .main-section .mobile-box .shadow {
+    opacity: 0.2;
+  }
   .main-section .front-about {
     padding: 0;
     grid-column: span 12;
+    position: relative;
+    z-index: 2;
   }
   .main-section .front-about h1 {
     width: 100%;
