--- a/scss/sourse/response/_mw998.scss
+++ b/scss/sourse/response/_mw998.scss
@@ -50,6 +50,8 @@ nav {
 
 .main-grid {
   padding: 0 15px;
+  position: relative;
+  z-index: 2;
 
   grid-column-gap: 0;
 }
@@ -118,11 +120,17 @@ nav {
       width: 200px;
       margin-left: 60px;
     }
+
+    .shadow {
+      opacity: 0.2;
+    }
   }
 
   .front-about {
     padding: 0;
     grid-column: span 12;
+    position: relative;
+    z-index: 2;
 
     h1 {
       width: 100%;
