--- a/css/response.css
+++ b/css/response.css
@@ -137,6 +137,10 @@
     margin: 0 auto 15px;
   }
 
+  .line-2 {
+    filter: blur(3px);
+  }
+
   .section-text h2 {
     font-size: 21px;
     text-align: center;
