--- a/css/response.css
+++ b/css/response.css
@@ -251,8 +251,15 @@
     position: absolute;
   }
   .section-slider .slider-img .page {
-    width: 80%;
+    width: 90%;
     left: 10%;
+  }
+
+  .owl-nav .owl-prev,
+.owl-nav .owl-next {
+    width: 30px;
+    height: 30px;
+    margin: 15px;
   }
 
   .section-partners {
