--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@
   font-style: normal;
 }
 @font-face {
+  font-family: "light";
+  src: url("../fonts/Rubik-Light.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
   font-family: "medium";
   src: url("../fonts/Rubik-Medium.ttf");
   font-weight: normal;
@@ -1792,6 +1798,11 @@ h2.global span {
   box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.5);
   padding-top: 31px;
   border-radius: 0 0 6px 6px;
+  height: 100vh;
+  position: fixed;
+  left: 74%;
+  top: 0;
+  padding-top: 90px;
 }
 
 .cabinet-info {
@@ -1918,6 +1929,7 @@ h2.global span {
   padding-top: 32px;
   padding-left: 30px;
   position: relative;
+  font-family: "light";
 }
 .ce-info .ce-line {
   display: flex;
@@ -1971,6 +1983,7 @@ h2.global span {
   display: block;
   z-index: auto;
   margin-left: -10px;
+  cursor: pointer;
 }
 .gallery-navigation .g-prev {
   background-position: center;
@@ -1992,8 +2005,14 @@ h2.global span {
 .gallery-navigation .img-container img {
   width: 100%;
   height: 70px;
-  margin: 5px 0px;
+  margin: 12px 0px;
   object-fit: cover;
+}
+.gallery-navigation .dai-item {
+  display: none;
+}
+.gallery-navigation .dai-item.show {
+  display: block;
 }
 
 .btn-wc-bottom {
