--- a/scss/sourse/_cabinet-all.scss
+++ b/scss/sourse/_cabinet-all.scss
@@ -146,6 +146,13 @@
   box-shadow: $shadow;
   padding-top: 31px;
   border-radius: 0 0 6px 6px;
+  // -------
+
+  height: 100vh;
+  position: fixed;
+  left: 74%;
+  top: 0;
+  padding-top: 90px;
 }
 
 .cabinet-info {
@@ -292,6 +299,7 @@
   padding-top: 32px;
   padding-left: 30px;
   position: relative;
+  font-family: "light";
 
   .ce-line {
     display: flex;
@@ -339,6 +347,7 @@
   .g-next {
     @include positionElement(20px, 20px, 50%);
     margin-left: -10px;
+    cursor: pointer;
   }
 
   .g-prev {
@@ -358,8 +367,16 @@
     img {
       width: 100%;
       height: 70px;
-      margin: 5px 0px;
+      margin: 12px 0px;
       object-fit: cover;
+    }
+  }
+
+  .dai-item {
+    display: none;
+
+    &.show {
+      display: block;
     }
   }
 }
