--- a/scss/sourse/default/_fonts.scss
+++ b/scss/sourse/default/_fonts.scss
@@ -13,6 +13,13 @@
 }
 
 @font-face {
+	font-family: "light";
+	src: url("../fonts/Rubik-Light.ttf");
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
 	font-family: "medium";
 	src: url("../fonts/Rubik-Medium.ttf");
 	font-weight: normal;
